# hello-gn

./: .r  BUILD.gn  README.md
src/: hello.c  hello_shared.c  hello_shared.h  hello_static.c  hello_static.h
